--- a/site pessoal/stylepessoal.css
+++ b/site pessoal/stylepessoal.css
@@ -1,8 +1,8 @@
 body {
     color: rgb(237, 237, 225);
-    background-color: #1a1a1a;
+    background-color: #5c367a;
     text-align: left;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-weight: bold;
 }
 
