--- a/site pessoal/stylepessoal.css
+++ b/site pessoal/stylepessoal.css
@@ -1,41 +1,92 @@
-body {
-    color: rgb(237, 237, 225);
-    background-color: #5c367a;
-    text-align: left;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-weight: bold;
+*{
+    margin: 0.3%;
+    box-sizing: border-box;
+    font-family: Arial;
+    text-decoration: none;
+    padding: 0.3%;
+}
+header{
+    height: 120px;
 }
 
-
-.img{
-    clip-path: circle();
+.container{
+width: 1200px;
+height: auto;
+margin: auto;
+color: black;
+position: relative;
+}
+.container .parag{
+    padding-left: 20px;
+    padding-bottom: 25px;
+    font-family: Arial;
+    letter-spacing: 1.2px;
+    line-height: 30px;
+    color: rgb(158, 118, 160);
+    font-size: 20px;
+}
+.container h1{
+    font-family: 'Times New Roman';
+    font-size: 50px;
+    padding-left: 20px;
+    margin-top: 9%;
+    letter-spacing: 2px;
+    color: blueviolet;
+}
+.container .clique{
+    width: 80px;
+    height:80px;
+    background:blueviolet;
+    border: none;
+    margin-bottom: 10px;
+    font-size: 18px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: .4s ease;
+}
+.container .clique a{
+    text-decoration: none;
+    color: black;
+    transition: .3s ease;
+}
+.clique:hover{
+    background-color:rgb(158, 118, 160);
+}
+.container .titulo{
+    color:rgb(158, 118, 160);
+    font-size: 60px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+body{
+    background: url(foto\ de\ fundo.jpg) no-repeat;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    position: relative;
+    background-size: cover;
+    background-position:  center center;
+}
+span{
+    color: rgb(158, 118, 160);
+    font-size: 20px;
 }
 
-
-.cursos{
-    font-size: medium;
-    margin-bottom: 20px;
-    margin-left: 20px;
-    padding: 2px;
+p{
+font-family: Arial, Helvetica, sans-serif;
+font-size: 16px;
 }
-
-.hobbies{
-    font-size: medium;
-    margin-bottom: 20px;
-    margin-left: 20px;
-    padding: 2px;
-
+h1{
+    font-family:Arial, Helvetica, sans-serif ;
+    font-size: 20px;
 }
-
-.projetos{
-    font-size: medium;
-    margin-bottom: 20px;
-    margin-left: 20px;
-    padding: 2px;
-
+h2{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
 }
-
-.rodape{
-    margin-left: 20px;
-    font-size: small;
+img{
+    width: 140px;
+    height: 140px;
+}
+a{
+    text-decoration: none;
 }
